--- a/intro-mark.html
+++ b/intro-mark.html
@@ -20,7 +20,7 @@
       const App = () => {
         return (
             <>
-                <h1>Alpha Cohort 2024</h1>g
+                <h1>Alpha Cohort 2024</h1>
                 <Classmates />
                 <Footer />
                 
