--- a/intro-morgan-ryan/public/index.html
+++ b/intro-morgan-ryan/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://png.pngtree.com/png-clipart/20190705/original/pngtree-vector-cool-emoji-icon-png-image_4183904.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Morgan and Ryan's React Venture</title>
+    <title>RyMo React Venture</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
